this is a little test

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hi, this is a test</h1>
+    <h1>Hi, this is a test of html</h1>
 </body>
 </html>
